--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,57 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+.right .bm-burger-button {
+  left: initial;
+  right: 36px;
+}
+.bm-burger-bars {
+  background: #373a47;
+}
+.bm-morph-shape {
+  fill: #373a47;
+}
+.bm-menu {
+  background: #373a47;
+}
+.bm-menu a {
+  color: #b8b7ad;
+}
+.bm-menu a:hover,
+.bm-menu a:focus {
+  color: #c94e50;
+}
+
+.bm-item-list a {
+  padding: 0.8em;
+}
+
+.bm-item-list span {
+  padding: 0.8em;
+}
+.bm-item-list span {
+  margin-left: 10px;
+  font-weight: 700;
+}
+
+.bm-item-list a span {
+  margin-left: 10px;
+  font-weight: 700;
+}
+a {
+  color: #4e4a46;
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: #c94e50;
+}
