--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,800);
+*, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
+
 body {
   margin: 0;
   padding: 0;
